--- a/src/components/Todos.css
+++ b/src/components/Todos.css
@@ -5,5 +5,11 @@
 }
 
 button{
-    width: 5.05rem;
+    width: 7.6rem;
+}
+
+
+.completed {
+    text-decoration: line-through;
+    opacity: 0.3;
 }
