--- a/src/components/Todos.css
+++ b/src/components/Todos.css
@@ -1,10 +1,14 @@
 .container {
-    height: 1.5rem;
+    /* height: 1.5rem; */
     width: 15rem;
     color: brown;
     margin: auto;
 }
+.container p {
+    word-wrap: break-word;
 
+    max-width: 250px;
+}
 .btn-done{
     width: 7.6rem;
     color:rgb(51, 255, 0);
